--- a/assets/preload/data/chart/winter-horrorland/winter-horrorland-easy.json
+++ b/assets/preload/data/chart/winter-horrorland/winter-horrorland-easy.json
@@ -2416,6 +2416,8 @@
         "needsVoices": true,
         "player1": "bf-christmas",
         "player2": "monster-christmas",
+        "gfVersion":"gf-christmas",
+        "stage":"mallEvil",
         "sectionLengths": [],
         "speed": 1,
         "validScore": true
